--- a/front/deployment.yaml
+++ b/front/deployment.yaml
@@ -50,7 +50,7 @@ metadata:
   labels:
     app: web
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: web
@@ -60,7 +60,7 @@ spec:
         app: web
     spec:
       containers:
-      - name: web
+      - name: web-pod
         image: ACCT.dkr.ecr.REG.amazonaws.com/REPO:VER
         ports:
         - containerPort: 80       
