--- a/back/deployment.yaml
+++ b/back/deployment.yaml
@@ -9,7 +9,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   namespace: NAMESPACE
-  name: ingress-backend
+  name: ingress-svc
   annotations:
     # use the shared ingress-nginx
     kubernetes.io/ingress.class: "nginx"
@@ -25,6 +25,16 @@ spec:
             name: backend
             port:
               number: 8080
+  - host: front.alexkdevops.click
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service: 
+            name: frontend
+            port:
+              number: 80
                           
 ---
 
