--- a/front/deployment.yaml
+++ b/front/deployment.yaml
@@ -9,19 +9,29 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   namespace: NAMESPACE
-  name: ingress-frontend
+  name: ingress-svc
   annotations:
     # use the shared ingress-nginx
     kubernetes.io/ingress.class: "nginx"
 spec:
   rules:
-  - host: front.alexkdevops.click
+  - host: back.alexkdevops.click
     http:
       paths:
       - path: /
         pathType: Prefix
         backend:
           service:
+            name: backend
+            port:
+              number: 8080
+  - host: front.alexkdevops.click
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service: 
             name: frontend
             port:
               number: 80
