--- a/front/deployment.yaml
+++ b/front/deployment.yaml
@@ -8,6 +8,7 @@ metadata:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
+  namespace: NAMESPACE
   name: ingress-svc-front
   annotations:
     # use the shared ingress-nginx
