--- a/back/deployment.yaml
+++ b/back/deployment.yaml
@@ -1,47 +1,47 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: NAMESPACE
+# apiVersion: v1
+# kind: Namespace
+# metadata:
+#   name: NAMESPACE
 
----  
+# ---  
 
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  namespace: NAMESPACE
-  name: ingress-svc-back
-  annotations:
-    # use the shared ingress-nginx
-    kubernetes.io/ingress.class: "nginx"
-spec:
-  rules:
-  - host: back.alexkdevops.click
-    http:
-      paths:
-      - path: /
-        pathType: Prefix
-        backend:
-          service:
-            name: backend
-            port:
-              number: 8080
+# apiVersion: networking.k8s.io/v1
+# kind: Ingress
+# metadata:
+#   namespace: NAMESPACE
+#   name: ingress-svc-back
+#   annotations:
+#     # use the shared ingress-nginx
+#     kubernetes.io/ingress.class: "nginx"
+# spec:
+#   rules:
+#   - host: back.alexkdevops.click
+#     http:
+#       paths:
+#       - path: /
+#         pathType: Prefix
+#         backend:
+#           service:
+#             name: backend
+#             port:
+#               number: 8080
                          
----
+# ---
 
-apiVersion: v1
-kind: Service
-metadata:
-  namespace: NAMESPACE
-  name: backend
-spec: 
-  type: ClusterIP
-  ports:
-  - port: 8080
-    targetPort: 8080
-  selector:
-    app: api
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   namespace: NAMESPACE
+#   name: backend
+# spec: 
+#   type: ClusterIP
+#   ports:
+#   - port: 8080
+#     targetPort: 8080
+#   selector:
+#     app: api
 
----
+# ---
 
 apiVersion: apps/v1
 kind: Deployment
