--- a/front/deployment.yaml
+++ b/front/deployment.yaml
@@ -1,47 +1,47 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: NAMESPACE
+# apiVersion: v1
+# kind: Namespace
+# metadata:
+#   name: NAMESPACE
 
----
+# ---
 
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  namespace: NAMESPACE
-  name: ingress-svc-front
-  annotations:
-    # use the shared ingress-nginx
-    kubernetes.io/ingress.class: "nginx"
-spec:
-  rules:
-  - host: front.alexkdevops.click
-    http:
-      paths:
-      - path: /
-        pathType: Prefix
-        backend:
-          service: 
-            name: frontend
-            port:
-              number: 80
+# apiVersion: networking.k8s.io/v1
+# kind: Ingress
+# metadata:
+#   namespace: NAMESPACE
+#   name: ingress-svc-front
+#   annotations:
+#     # use the shared ingress-nginx
+#     kubernetes.io/ingress.class: "nginx"
+# spec:
+#   rules:
+#   - host: front.alexkdevops.click
+#     http:
+#       paths:
+#       - path: /
+#         pathType: Prefix
+#         backend:
+#           service: 
+#             name: frontend
+#             port:
+#               number: 80
                           
----
-apiVersion: v1
-kind: Service
-metadata:
-  namespace: NAMESPACE
-  name: frontend
-spec: 
-  type: ClusterIP
-  ports:
-  - port: 80
-    targetPort: 80
-  selector:
-    app: web
+# ---
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   namespace: NAMESPACE
+#   name: frontend
+# spec: 
+#   type: ClusterIP
+#   ports:
+#   - port: 80
+#     targetPort: 80
+#   selector:
+#     app: web
 
 
----
+# ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
