--- a/back/deployment.yaml
+++ b/back/deployment.yaml
@@ -18,7 +18,7 @@ spec:
   - host: back.alexkdevops.click
     http:
       paths:
-      - path: /
+      - path: "/"
         pathType: Prefix
         backend:
           service:
