--- a/front/deployment.yaml
+++ b/front/deployment.yaml
@@ -18,7 +18,7 @@ spec:
   - host: front.alexkdevops.click
     http:
       paths:
-      - path: /
+      - path: "/"
         pathType: Prefix
         backend:
           service: 
