--- a/back/deployment.yaml
+++ b/back/deployment.yaml
@@ -8,6 +8,7 @@ metadata:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
+  namespace: NAMESPACE
   name: backend-svc
   annotations:
     # use the shared ingress-nginx
