--- a/back/deployment.yaml
+++ b/back/deployment.yaml
@@ -65,3 +65,14 @@ spec:
         image: ACCT.dkr.ecr.REG.amazonaws.com/REPO:VER
         ports:
         - containerPort: 8080
+        env:
+          - name: MYSQL_USER
+            value: "versus"
+          - name: MYSQL_PASSWORD
+            value: "password"
+          - name: MYSQL_PORT
+            value: "3306"
+          - name: MYSQL_HOST
+            value: "versus.c7pmwjifbb9j.REG.rds.amazonaws.com"
+          - name: MYSQL_DATABASE
+            value: "versus"
