--- a/back/deployment.yaml
+++ b/back/deployment.yaml
@@ -66,13 +66,41 @@ spec:
         ports:
         - containerPort: 8080
         env:
-          - name: MYSQL_USER
-            value: "admin"
-          - name: MYSQL_PASSWORD
-            value: "password"
-          - name: MYSQL_PORT
-            value: "3306"
-          - name: MYSQL_HOST
-            value: "versus21c.c7pmwjifbb9j.REG.rds.amazonaws.com"
-          - name: MYSQL_DATABASE
-            value: "versus21c"
+      - name: MYSQL_USER
+        valueFrom:
+          secretKeyRef:
+            name: credentials
+            key: user
+      - name: MYSQL_PASSWORD
+        valueFrom:
+          secretKeyRef:
+            name: credentials
+            key: password
+      - name: MYSQL_PORT
+        valueFrom:
+          secretKeyRef:
+            name: credentials
+            key: port
+      - name: MYSQL_HOST
+        valueFrom:
+          secretKeyRef:
+            name: credentials
+            key: host
+      - name: MYSQL_DATABASE
+        valueFrom:
+          secretKeyRef:
+            name: credentials
+            key: database
+
+            
+                                           
+          # - name: MYSQL_USER
+          #   value: "admin"
+          # - name: MYSQL_PASSWORD
+          #   value: "password"
+          # - name: MYSQL_PORT
+          #   value: "3306"
+          # - name: MYSQL_HOST
+          #   value: "versus21c.c7pmwjifbb9j.REG.rds.amazonaws.com"
+          # - name: MYSQL_DATABASE
+          #   value: "versus21c"
