--- a/frontend/deployment.yaml
+++ b/frontend/deployment.yaml
@@ -1,3 +1,11 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: NAMESPACE
+
+--- 
+
+
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
