--- a/frontend/deployment.yaml
+++ b/frontend/deployment.yaml
@@ -16,7 +16,7 @@ metadata:
     kubernetes.io/ingress.class: "nginx"
 spec:
   rules:
-  - host: www.front.alexkdevops.click
+  - host: front.alexkdevops.click
     http:
       paths:
       - path: "/"
